--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
             <h4 class="my-0 font-weight-normal">Après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="apres-demain-forecast-main" class="card-title">
             </h2>
 			  
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="apres-demain-forecast-more-info"></p>
+              <div id="apres-demain-icon-weather-container" ></div>
+              <h3 id="apres-demain-forecast-temp"> </h3>
             </div>
           </div>
         </div>
@@ -109,12 +109,12 @@
             <h4 class="my-0 font-weight-normal">Encore après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="encore-apres-demain-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="encore-apres-demain-forecast-more-info"></p>
+              <div id="encore-apres-demain-icon-weather-container" ></div>
+              <h3 id="encore-apres-demain-forecast-temp"> </h3>
             </div>
           </div>
         </div>
